--- a/css/index.css
+++ b/css/index.css
@@ -80,10 +80,16 @@ button
     background: #fff;
 }
 
-.error{
-    border: 2px solid red;
+.msg {
+    border: 2px solid #ffa908;
     border-radius: 3px;
     padding: 10px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.none {
+    display: none;
 }
 
 .exit{
